# TCD_COMMUNITY

./: CMakeLists.txt  README.md  dbus_reader.cpp  dbus_reader.h  hardwarecontrol.cpp  hardwarecontrol.h  main.cpp  myStructures.h
TCD_Settings/: tcd_config.yaml
TCD_Settings/profile/: Generic_GPU_battery.yaml  Generic_GPU_power.yaml  Generic_IGP_battery.yaml  Generic_IGP_power.yaml  pulse_battery.yaml  pulse_power.yaml
